--- a/package.json
+++ b/package.json
@@ -6,18 +6,36 @@
   "author": "Moovweb",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^3.3.2",
+    "@material-ui/icons": "^3.0.1",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "moov_perf": "1.2.5",
-    "moov_rewriter": "^3.2.3",
-    "moov_stdlib": "2.6.31",
-    "nodemon": "^1.18.6"
+    "history": "^4.7.2",
+    "js-cookie": "^2.2.0",
+    "jss": "^9.8.0",
+    "jss-global": "^3.0.0",
+    "jss-nested": "^6.0.1",
+    "lodash": "^4.17.5",
+    "mobx": "^4.1.0",
+    "mobx-react": "^5.0.0",
+    "mobx-state-tree": "^2.0.5",
+    "mst-middlewares": "^2.0.1",
+    "nodemon": "^1.18.6",
+    "prop-types": "^15.6.1",
+    "raw-loader": "^0.5.1",
+    "react": "^16.6.0",
+    "react-dev-utils": "^5.0.1",
+    "react-dom": "^16.5.2",
+    "react-helmet": "^5.2.0",
+    "react-jss": "^8.3.5",
+    "react-storefront": "^5.0.4",
+    "react-svg-loader": "^2.1.0",
+    "react-transition-group": "^2.5.0",
+    "react-universal-component": "^2.9.0"
   },
   "devDependencies": {
-    "@material-ui/core": "^3.3.2",
-    "@material-ui/icons": "^3.0.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.3",
@@ -43,37 +61,15 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
     "file-loader": "^2.0.0",
-    "history": "^4.7.2",
-    "js-cookie": "^2.2.0",
-    "jss": "^9.8.0",
-    "jss-global": "^3.0.0",
-    "jss-nested": "^6.0.1",
-    "lodash": "^4.17.5",
-    "mobx": "^4.1.0",
-    "mobx-react": "^5.0.0",
-    "mobx-state-tree": "^2.0.5",
-    "moov_builder": "^3.0.7",
-    "moovsdk": "^7.0.22",
-    "mst-middlewares": "^2.0.1",
-    "prop-types": "^15.6.1",
-    "raw-loader": "^0.5.1",
-    "react": "^16.6.0",
-    "react-dev-utils": "^5.0.1",
-    "react-dom": "^16.5.2",
-    "react-helmet": "^5.2.0",
-    "react-jss": "^8.3.5",
-    "react-storefront": "^5.0.1",
-    "react-svg-loader": "^2.1.0",
-    "react-transition-group": "^2.5.0",
-    "react-universal-component": "^2.9.0",
+    "html-webpack-plugin": "^3.2.0",
     "remotedev": "^0.2.7",
-    "uglifyjs-webpack-plugin": "^1.2.3",
     "webpack": "^4.25.1",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-flush-chunks": "^1.2.3"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=development node scripts/start.js"
+    "start": "cross-env NODE_ENV=development node scripts/start.js",
+    "link:all": "npm link react-storefront react-storefront-middleware"
   },
   "description": "An example app built with react-storefront and express."
 }
